<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/first_screen"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_screen"
        />

    <Button
        android:id="@+id/btn_replace_with_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/replace_with_second_screen"
        />

    <Button
        android:id="@+id/btn_show_first_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_first_dialog"
        />

    <Button
        android:id="@+id/btn_show_navigate_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_navigate_dialog"
        />
</LinearLayout>
