<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/second_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/second_screen_title"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_screen"
        />

    <Button
        android:id="@+id/btn_confirm_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pop"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_show_second_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_second_dialog"
        />
</LinearLayout>
