<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/third_screen_title"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_pop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pop"
        />

    <Button
        android:id="@+id/btn_pop_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pop_two"
        />

    <Button
        android:id="@+id/btn_pop_to_second_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pop_to_second_screen"
        />

    <Button
        android:id="@+id/btn_show_third_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_third_dialog"
        />
</LinearLayout>
